--- a/applejenkins.css
+++ b/applejenkins.css
@@ -1,11 +1,7 @@
 body {
-  background: #63818a;
-  background: -moz-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #63818a), color-stop(100%, #73939b));
-  background: -webkit-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: -o-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: -ms-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: linear-gradient(top, #63818a 0%, #73939b 100%); }
-
-h1, h2, h3, h4, h5, h6 {
-  color: #4f7b94; }
+    background: none repeat scroll 0 0 #333333;
+    color: #999999;
+    font-family: "Roboto", sans-serif;
+    font-size: 13px;
+    line-height: 20px;
+}
