--- a/applejenkins.css
+++ b/applejenkins.css
@@ -1,7 +1,7 @@
 /* Main Body Styling */
 body {
     background: none repeat scroll 0 0 #333333;
-    color: #999999;
+    color: #c4bbbb;
     font-family: "Helvetica Neue", sans-serif;
     font-size: 13px;
     line-height: 20px;
