--- a/applejenkins.css
+++ b/applejenkins.css
@@ -3,7 +3,7 @@ body {
     background: none repeat scroll 0 0 #333333;
     color: #c4bbbb;
     font-family: "Helvetica Neue", sans-serif;
-    font-size: 13px;
+    font-size: 15px;
     line-height: 20px;
 }
 /* Styling for wrapper div added via javascript around project table */
@@ -13,10 +13,12 @@ body {
     color: #333333;
     padding: 0 40px 20px 40px;
 }
-/* Hide top strip with Jenkins title and search bar */
+/* Hide top strip with Jenkins title and search bar
 #top-panel {
     display: none;
 }
+*/
+
 /* Style header and footer strips */
 .top-sticker-inner,
 .footer-table {
