Revert "Testing background Color"
This reverts commit a1e2952eb87e0d73e6a8d85e334c4375269b3a61.

--- a/applejenkins.css
+++ b/applejenkins.css
@@ -13,13 +13,11 @@ body {
     color: #333333;
     padding: 0 40px 20px 40px;
 }
-/* Hide top strip with Jenkins title and search bar*/
-
+/* Hide top strip with Jenkins title and search bar
 #top-panel {
-    /*display: none;*/
-    background-color: #dc1616;
-
+    display: none;
 }
+*/
 
 /* Style header and footer strips */
 .top-sticker-inner,
