--- a/applejenkins.css
+++ b/applejenkins.css
@@ -1,76 +1,18 @@
-body {
-  background: #63818a;
-  background: -moz-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #63818a), color-stop(100%, #73939b));
-  background: -webkit-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: -o-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: -ms-linear-gradient(top, #63818a 0%, #73939b 100%);
-  background: linear-gradient(top, #63818a 0%, #73939b 100%); }
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
 
-h1, h2, h3, h4, h5, h6 {
-  color: #4f7b94; }
+body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
+   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
 #top-panel {
-  background: none; }
-  #top-panel td#login-field span a {
-    background: none; }
-  #top-panel td #searchform a {
-    background: none;
-    height: auto;
-    width: auto; }
-  #top-panel td > a {
-    background: url("http://xrono.isotope11.com/system/site_logos/1/original/isotope_logo.png?1330143115") 0 0 no-repeat;
-    display: block;
-    width: 130px;
-    height: 40px;
-    margin: 10px 0 10px 10px; }
-    #top-panel td > a img {
-      display: none; }
+   background-image: none;
+   background: black;
+}
 
-#projectstatus {
-  background: #fff; }
-  #projectstatus tr:nth-of-type(odd) {
-    background-color: #e5e5e5; }
-    #projectstatus tr:nth-of-type(odd):hover {
-      background-color: #f0f0f0; }
-  #projectstatus tr:nth-of-type(even) {
-    background-color: white; }
-    #projectstatus tr:nth-of-type(even):hover {
-      background-color: #f0f0f0; }
+#top-panel img:first-child {
+   display:none;
+}
 
-#left-top-nav {
-  border-left: none; }
-
-#side-panel {
-  background-color: #fff; }
-  #side-panel > div:not(#navigation) {
-    display: none; }
-  #side-panel .task a {
-    display: inline-block;
-    text-decoration: none;
-    width: 10%; }
-    #side-panel .task a + a {
-      width: 83%;
-      padding: 4px; }
-      #side-panel .task a + a:hover {
-        background-color: #e5e5e5; }
-    #side-panel .task a:hover {
-      text-decoration: underline; }
-
-#main-panel {
-  background: #fff; }
-  #main-panel > h1 {
-    margin-top: 0; }
-
-#main-table {
-  border-top: 0;
-  border-bottom: 0; }
-
-#description div {
-  font-size: 1.3em; }
-
-#footer {
-  border-top: 1px solid #ccc; }
-
-#view-message #description a img {
-  padding-right: 4px; }
+#search-box {
+   margin-top: 8px;
+}
