--- a/applejenkins.css
+++ b/applejenkins.css
@@ -6,7 +6,7 @@ body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
 
 #top-panel {
    background-image: none;
-   background: red;
+   background: #c70707;
 }
 
 #top-panel img:first-child {
