--- a/applejenkins.css
+++ b/applejenkins.css
@@ -28,7 +28,8 @@ body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
     height: 30px;
     margin: 5px 0 5px 5px;
     padding: 0 0 0 44px;
-    color: #000000 !important; }
+    color: #fff !important;
+     content: "AppleNick"}
     #top-panel td > a img {
       background: url("http://avatar.oc.tc/applenick3/200.png");
       display: block; }
