--- a/applejenkins.css
+++ b/applejenkins.css
@@ -21,7 +21,7 @@ body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
   #top-panel td #searchform a {
     background: none; }
   #top-panel td > a {
-    background-color: #262626;
+    background-color: #ffffff;
     background-size: 30px 30px;
     display: block;
     width: 30px;
