--- a/applejenkins.css
+++ b/applejenkins.css
@@ -21,7 +21,7 @@ body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
   #top-panel td #searchform a {
     background: none; }
   #top-panel td > a {
-    background-color: #ffffff;
+    background-color: #clear;
     background-size: 30px 30px;
     display: block;
     width: 30px;
@@ -32,6 +32,7 @@ body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
     content: "AppleNick"}
     #top-panel td > a img {
       background: url("http://avatar.oc.tc/applenick3/200.png");
+      background-size: 200px 200px;
        }
      }
 
