--- a/applejenkins.css
+++ b/applejenkins.css
@@ -31,8 +31,8 @@ body, p, table, tr, td, strong, h1, h2, h3, h4, h5, h6, blockquote, li {
     color: #fff !important;
     }
     #top-panel td > a img {
-      background: url("http://avatar.oc.tc/applenick3/64.png");
-      content: "AppleNick's Build Server"
+      background: url("http://avatar.oc.tc/applenick3/100.png");
+      content: "AppleNick's Build Server";
       display: block;
        }
      }
